--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tnpm-sync": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "np --yolo --no-publish --tag=latest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "dependencies": {
     "execa": "^4.0.0",
     "yargs-parser": "^18.1.2"
+  },
+  "devDependencies": {
+    "np": "^6.2.0"
   }
 }
