--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tnpm-sync",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
