--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tnpm-sync": "./bin/index.js"
   },
   "scripts": {
-    "prepublishOnly": "np --yolo --no-publish --tag=latest"
+    "prepublishOnly": "np --yolo --no-publish --tag=latest",
+    "postpublish": "node ./bin/index.js",
   },
   "repository": {
     "type": "git",
